; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ethoc.c_ethoc_read_bd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ethoc.c_ethoc_read_bd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ethoc = type { i32 }
%struct.ethoc_bd = type { i8*, i8* }

@ETHOC_BD_BASE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ethoc*, i32, %struct.ethoc_bd*)* @ethoc_read_bd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ethoc_read_bd(%struct.ethoc* %0, i32 %1, %struct.ethoc_bd* %2) #0 {
  %4 = alloca %struct.ethoc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ethoc_bd*, align 8
  %7 = alloca i64, align 8
  store %struct.ethoc* %0, %struct.ethoc** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.ethoc_bd* %2, %struct.ethoc_bd** %6, align 8
  %8 = load i64, i64* @ETHOC_BD_BASE, align 8
  %9 = load i32, i32* %5, align 4
  %10 = sext i32 %9 to i64
  %11 = mul i64 %10, 16
  %12 = add i64 %8, %11
  store i64 %12, i64* %7, align 8
  %13 = load %struct.ethoc*, %struct.ethoc** %4, align 8
  %14 = load i64, i64* %7, align 8
  %15 = add nsw i64 %14, 0
  %16 = call i8* @ethoc_read(%struct.ethoc* %13, i64 %15)
  %17 = load %struct.ethoc_bd*, %struct.ethoc_bd** %6, align 8
  %18 = getelementptr inbounds %struct.ethoc_bd, %struct.ethoc_bd* %17, i32 0, i32 1
  store i8* %16, i8** %18, align 8
  %19 = load %struct.ethoc*, %struct.ethoc** %4, align 8
  %20 = load i64, i64* %7, align 8
  %21 = add nsw i64 %20, 4
  %22 = call i8* @ethoc_read(%struct.ethoc* %19, i64 %21)
  %23 = load %struct.ethoc_bd*, %struct.ethoc_bd** %6, align 8
  %24 = getelementptr inbounds %struct.ethoc_bd, %struct.ethoc_bd* %23, i32 0, i32 0
  store i8* %22, i8** %24, align 8
  ret void
}

declare dso_local i8* @ethoc_read(%struct.ethoc*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
